classDiagram
  %% parse -- auto-generated by MermaidMain, do not edit

  class DimensionError {
    -val message String
  }
  class LaTeXParserException {
    -val message String
  }
  class ParseError {
    <<trait>>
    +def message String
    -def toException ParseException
  }
  class ParseException {
    -val message String
  }
  class SyntaxError {
    -val message String
    -val position Int
  }
  class UnitError {
    -val message String
  }
  class UnitsParser {
    <<trait>>
    -def knownUnitParser Parser~Unit~_~~
    -def parseUnit(input:String) Either~ParseError,Unit~_~~
    -def superscriptParser Parser~Int~
    -def unitPowerParser Parser~Unit~_~~
    -def unitProductParser Parser~Unit~_~~
    -def unitTermParser Parser~Unit~_~~
    -def unitsParser Parser~Unit~_~~
    -val skipWhitespace Boolean
  }
  class UnitsParserException {
    -val msg String
  }

  ParseError <|-- DimensionError
  ParseError <|-- SyntaxError
  ParseError <|-- UnitError
